// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Link /> Default story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> Destructive story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--error"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> DestructiveLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--error"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> FullWidth story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand clickable-style--full-width"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleIconOnly story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="https://go.czi.team/eds"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      go back
    </title>
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleIconOnlySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="https://go.czi.team/eds"
>
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      go back
    </title>
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleLeftIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> IconClickableStyleRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconClickableStyleRightIconSmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--icon clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--error"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconNeutral story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--neutral"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconSuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--success"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> IconWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--icon clickable-style--warning"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> LinkInParagraphContext story renders snapshot 1`] = `
<div>
  Lorem ipsum dolor sit amet,
   
  <a
    class="clickable-style clickable-style--link clickable-style--brand link--link"
    href="https://go.czi.team/eds"
  >
    consectetur adipiscing elit
  </a>
  . Morbi porta at ante quis molestie. Nam scelerisque id diam at iaculis. Nullam sit amet iaculis erat. Nulla id tellus ante.
   
  <a
    class="clickable-style clickable-style--link clickable-style--brand link--link"
    href="https://go.czi.team/eds"
  >
    Aliquam pellentesque ipsum sagittis, commodo neque at, ornare est. Maecenas a malesuada sem, vitae euismod erat. Nullam molestie nunc non dui dignissim fermentum.
  </a>
   
  Aliquam id volutpat nulla, sed auctor orci. Fusce cursus leo nisi. Fusce vehicula vitae nisl nec ultricies. Cras ut enim nec magna semper egestas. Sed sed quam id nisl bibendum convallis. Proin suscipit, odio
   
  <a
    class="clickable-style clickable-style--link clickable-style--brand link--link"
    href="https://go.czi.team/eds"
  >
    vel pulvinar
  </a>
   euismod, risus eros ullamcorper lectus, non blandit nulla dui eget massa.
</div>
`;

exports[`<Link /> LinkNeutral story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--neutral link--link"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> LinkRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    class="icon"
    fill="currentColor"
    role="img"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <title>
      opens in a new tab
    </title>
    <path
      d="M18 19H6c-.55 0-1-.45-1-1V6c0-.55.45-1 1-1h5c.55 0 1-.45 1-1s-.45-1-1-1H5c-1.11 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2v-6c0-.55-.45-1-1-1s-1 .45-1 1v5c0 .55-.45 1-1 1zM14 4c0 .55.45 1 1 1h2.59l-9.13 9.13c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L19 6.41V9c0 .55.45 1 1 1s1-.45 1-1V4c0-.55-.45-1-1-1h-5c-.55 0-1 .45-1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> Primary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> PrimaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> PrimaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--primary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> PrimaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--primary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> PrimarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--primary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> Secondary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryError story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--error"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> SecondaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> SecondarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--brand"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondarySuccess story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--success"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> SecondaryWarning story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--warning"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> Tertiary story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> TertiaryLeftIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  href="https://go.czi.team/eds"
>
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M19 11H7.83l4.88-4.88c.39-.39.39-1.03 0-1.42-.39-.39-1.02-.39-1.41 0l-6.59 6.59c-.39.39-.39 1.02 0 1.41l6.59 6.59c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L7.83 13H19c.55 0 1-.45 1-1s-.45-1-1-1z"
    />
  </svg>
  Link
</a>
`;

exports[`<Link /> TertiaryMedium story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--md clickable-style--secondary clickable-style--neutral"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> TertiaryRightIcon story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--lg clickable-style--secondary clickable-style--neutral"
  href="https://go.czi.team/eds"
>
  Link
  <svg
    aria-hidden="true"
    class="icon"
    fill="currentColor"
    viewBox="0 0 24 24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M5 13h11.17l-4.88 4.88c-.39.39-.39 1.03 0 1.42.39.39 1.02.39 1.41 0l6.59-6.59c.39-.39.39-1.02 0-1.41l-6.58-6.6c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41L16.17 11H5c-.55 0-1 .45-1 1s.45 1 1 1z"
    />
  </svg>
</a>
`;

exports[`<Link /> TertiarySmall story renders snapshot 1`] = `
<a
  class="clickable-style clickable-style--sm clickable-style--secondary clickable-style--neutral"
  href="https://go.czi.team/eds"
>
  Link
</a>
`;

exports[`<Link /> passes class names down properly 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link exampleClassName"
  data-testid="example-class-name"
  href="/"
>
  Click
</a>
`;

exports[`<Link /> passes test ids down properly 1`] = `
<a
  class="clickable-style clickable-style--link clickable-style--brand link--link"
  data-testid="example-test-id"
  href="/"
>
  Click
</a>
`;
